[metadata]
name = galaxy_dataminer 
summary = Galaxy Dataminter integration 
description-file = 
    README.md
author = Enol Fernández del Castillo 
author-email = enol.fernandez@egi.eu 
home-page = 
classifier = 
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4


[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages = 
    galaxy_dataminer	

[entry_points]
console_scripts = 
    generate_tools = galaxy_dataminer.generator:main
    call_wps = galaxy_dataminer.caller:main
    wps_extract = galaxy_dataminer.extract:main
